# Advance-mathematics

./: README.md
-Probability_Density_Functions_using_data-/: README.md  gan_pdf_estimation.py
Advanced_Mathematics_Assignment1/: README.md  output_parameters.txt  solution.py
Data-Generation-using-Modelling-and-Simulation/: Assignment_6.ipynb  README.md
Sampling_Assignment/: README.md  sampling_assignment.ipynb
TOPSIS-Text_Generation-Classification/: README.md  assignment.py  result.csv
Toposis-Multi-Criteria-Decision-Making/: LICENSE  README.md  app.py  data2.csv  pyproject.toml  streamlit_app.py  topsis.py
Youtube-Mashup-Generator/: MASHUP.py  README.md  app.py  cookies.txt
Youtube-Mashup-Generator/templates/: index.html
